minor changes in css of Header and Footer

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -4,3 +4,9 @@
     height: 100px;
     justify-content: center; 
 }
+
+.footer__logo {
+    flex-grow: 0;
+    flex-shrink: 0;
+    color: #fff;
+}
