--- a/markup/css/main.css
+++ b/markup/css/main.css
@@ -76,7 +76,7 @@ h3 {
 
 body {
   box-sizing: border-box;
-  max-width: 1240px;
+  /* max-width: 1240px; */
   padding: var(--vertical-gap) var(--horizontal-gap) 0;
   width: 100%;
 }
