--- a/src/components/ControlButtons/ControlButtons.module.css
+++ b/src/components/ControlButtons/ControlButtons.module.css
@@ -14,6 +14,8 @@
     font-weight: 700;
     padding: 10px;
     border: 2px dashed #636363;
+    background-color: transparent;
+    color: #fff;
 }
 
 .control-buttons__button--active {
